templates/backend-ingress/nginx-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend
spec:
  ingressClassName: nginx
  rules:
    - host: api.devops.firasbennacib.com
      http:
        paths:
          - path: /springMVC
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8088
